# CMakeList.txt : CMake project for JSONSanitiser, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (JSONSanitiser "JSONSanitiser.cpp" "JSONSanitiser.hpp")

# TODO: Add tests and install targets if needed.
